# nomia

./: .gitignore  README.md  nomia.yaml  pyproject.toml  test.md
.github/worfklows/: nomia-ci.yml
.github/workflows/: nomia-ci.yml
.nomia/: state.json
example_app/: app.py  nomia.yaml
nomia/: __init__.py  cli.py  config.py  decorators.py  discovery.py  fingerprint.py  models.py  output.py  project_scan.py  registry.py  state.py  test-workflow.md
nomia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nomia/services/: auditor.py  checker.py  validator.py
